# v4lcamera

./: .gitignore  CMakeLists.txt  README.md  v4lcamera.h  v4lcapture.cpp
include/: v4lcamera.h  v4lcapture.h
src/: CMakeLists.txt  main.cpp  v4lcamera.cpp  v4lcamera.h  v4lcamera.ui  v4lcapture.cpp  v4lcapture.h
