cmake_minimum_required(VERSION 2.9.1)

find_package(Qt5Widgets REQUIRED)
find_package(Qt5Core REQUIRED)
find_package(Qt5Gui REQUIRED)
include_directories (../include/)
set(CMAKE_AUTOUIC ON)
#set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set (LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../lib CACHE PATH "Directory for Libraries")
SET ( LIBSRC v4lcamera.cpp v4lcapture.cpp)
qt5_wrap_cpp(moc_sources ../include/v4lcamera.h)
ADD_LIBRARY ( v4lcamera SHARED ${LIBSRC} ${moc_sources} )
#ADD_LIBRARY ( v4lcamera SHARED ${LIBSRC})
target_link_libraries(v4lcamera v4l2 Qt5::Widgets Qt5::Gui Qt5::Core)
